feat: Write bindings for propack, svd based on it